--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+
     <title>Conversor de Moeda</title>
 </head>
 
@@ -42,12 +43,12 @@
         <!------------- Terceira label ------------------>
 
         <label>Valor
-            <input placeholder="R$ 10.000,00">
+            <input class="input-currency" placeholder="R$ 10.000,00">
         </label>
 
         <!------------- Botão Converter ------------------>
 
-        <button>Converter</button>
+        <button class="convert-button">Converter</button>
 
         <section>
 
@@ -55,7 +56,7 @@
             <div class="box">
                 <img src="./img/real.png" alt="logo-moeda-a-converter">
                 <p class="moeda">Real</p>
-                <p class="valor-moeda">R$ 0,00</p>
+                <p class="currency-value-to-convert">R$ 0,00</p>
 
             </div>
 
@@ -66,7 +67,7 @@
             <div class="box">
                 <img src="./img/dolar.png" alt="logo-moeda-convertida">
                 <p class="moeda">Dólar</p>
-                <p class="valor-moeda">US$ 0.0</p>
+                <p class="currency-value">US$ 0.0</p>
 
             </div>
 
@@ -75,5 +76,7 @@
     </main>
 
 </body>
+
+<script src="./script.js"></script>
 
 </html>
