--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,10 @@
         <label>
             Converter <b>para</b>
 
-            <select>
+            <select class="currency-select">
 
-                <option>US$ Dólar americano </option>
-                <option>€ Euro</option>
+                <option value="dolar">US$ Dólar americano </option>
+                <option value="euro">€ Euro</option>
 
 
             </select>
@@ -65,8 +65,8 @@
             <!------------- div logo-moeda-convertida ------------------>
 
             <div class="box">
-                <img src="./img/dolar.png" alt="logo-moeda-convertida">
-                <p class="moeda">Dólar</p>
+                <img class="currency-img" src="./img/dolar.png" alt="logo-moeda-convertida">
+                <p class="moeda" id="currency-name">Dólar americano</p>
                 <p class="currency-value">US$ 0.0</p>
 
             </div>
