melhorias no codigo

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <img class="logo" src="./img/logo.gif" alt="logo-conversor-moeda">
+    <img class="logo" src="./img/banner conversor.png" alt="logo-conversor-moeda">
 
     <main>
         <!------------- Primeira label ------------------>
