--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./src/css/style.css">
 
     <title>Conversor de Moeda</title>
 </head>
 
 <body>
 
-    <img class="logo" src="./img/banner conversor.png" alt="logo-conversor-moeda">
+    <img class="logo" src="./src/img/banner conversor.png" alt="logo-conversor-moeda">
 
     <main>
         <!------------- Primeira label ------------------>
@@ -54,18 +54,18 @@
 
             <!------------- div logo-moeda-a-Converter ------------------>
             <div class="box">
-                <img src="./img/real.png" alt="logo-moeda-a-converter">
+                <img src="./src/img/real.png" alt="logo-moeda-a-converter">
                 <p class="moeda">Real</p>
                 <p class="currency-value-to-convert">R$ 0,00</p>
 
             </div>
 
-            <img class="seta" src="./img/seta.png" alt="seta">
+            <img class="seta" src="./src/img/seta.png" alt="seta">
 
             <!------------- div logo-moeda-convertida ------------------>
 
             <div class="box">
-                <img class="currency-img" src="./img/dolar.png" alt="logo-moeda-convertida">
+                <img class="currency-img" src="./src/img/dolar.png" alt="logo-moeda-convertida">
                 <p class="moeda" id="currency-name">Dólar americano</p>
                 <p class="currency-value">US$ 0.0</p>
 
@@ -77,6 +77,6 @@
 
 </body>
 
-<script src="./script.js"></script>
+<script src="./src/javascript/script.js"></script>
 
 </html>
