adição de novas funcionalidades

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
                 <option value="dolar">US$ Dólar americano </option>
                 <option value="euro">€ Euro</option>
+                <option value="libra">£Libra</option>
+                <option value="bitcoin">₿Bitcoin</option>
+                <option value="bitcoin">Real(BRL)</option>
 
 
             </select>
@@ -70,6 +73,13 @@
                 <p class="currency-value">US$ 0.0</p>
 
             </div>
+
+
+
+
+
+
+            
 
         </section>
 
