--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             
             <div class="currency-box">
                 <img class="to-currency-img" src="./src/img/dolar.png" alt="logo-moeda-convertida">
-                <p class="currency" id="to-currency-name">Dólar americano</p>
+                <p class="currency" id="to-currency-name">Dólar</p>
                 <p class="currency-value">US$ 0.00</p>
             </div>
         </section>
